kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: age-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: age-app
  template:
    metadata:
      labels:
        app: age-app
    spec:
      containers:
      - name: age-app
        image: joebaho2/age-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
