kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: age-app
spec:
  selector:
    app: age-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
